; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_search.c_check_symloop_leave.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_search.c_check_symloop_leave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@SYMLOOP_ERROR = common dso_local global i32 0, align 4
@hh = common dso_local global i32 0, align 4
@symhash = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"item not found! weird stuff...\0A\00", align 1
@SYMLOOP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @check_symloop_leave to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_symloop_leave(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* null, i32** %4, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = load i32, i32* @SYMLOOP_ERROR, align 4
  store i32 %15, i32* %2, align 4
  br label %35

16:                                               ; preds = %9, %1
  %17 = load i32, i32* @hh, align 4
  %18 = load i32, i32* @symhash, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @HASH_FIND(i32 %17, i32 %18, %struct.TYPE_4__* %19, i32 16, i32* %20)
  %22 = load i32*, i32** %4, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %27, label %24

24:                                               ; preds = %16
  %25 = call i32 @log_err(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %26 = load i32, i32* @SYMLOOP_ERROR, align 4
  store i32 %26, i32* %2, align 4
  br label %35

27:                                               ; preds = %16
  %28 = load i32, i32* @hh, align 4
  %29 = load i32, i32* @symhash, align 4
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @HASH_DELETE(i32 %28, i32 %29, i32* %30)
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @free(i32* %32)
  %34 = load i32, i32* @SYMLOOP_OK, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %27, %24, %14
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @HASH_FIND(i32, i32, %struct.TYPE_4__*, i32, i32*) #1

declare dso_local i32 @log_err(i8*) #1

declare dso_local i32 @HASH_DELETE(i32, i32, i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
